--- a/factions.html
+++ b/factions.html
@@ -32,7 +32,9 @@
 
 <div id="resultadoFaction"></div>
 
+<div class="button-container">
     <button class="boton-bisque" id="boton1">Crea tu facción</button>
+</div>
 
 
 
